--- a/index.html
+++ b/index.html
@@ -1,37 +1,32 @@
-<!DOCTUPY html>
-<html lang="en">
+<!DOCTYPE html>
+<html>
 <head>
-	<meta charset="UTF-8">
-	<title>Formulario</title>
-	<link rel="stylesheet" type="text/css" href="stilos.css">
+	<meta charset="utf-8">
+	<title>Comida Mexicana</title>
+	<link rel="stylesheet" type="text/css" href="css.css">
 </head>
 <body>
-		<form class="Formulario">
+	<h1>Restaurante Monterrey</h1>
 
-			<h1>Reservas Monterrey</h1>
+		<div class="Login-box">
+			<img class="avatar" src="img/3032598 (1).png" alt="logo de comida">
+			<h1>Iniciar Sesión</h1>
+			<form>
+				<label for="Nombre de usuario">Nombre de Usuario</label>
+				<input type="text" placeholder="Enter Usermane" >
 
-
-			<div class="contenedor">
-			<div class="input-contenedor">
-				<i class="fas fa-dumbbell"></i>	
-
-				<input type="text" placeholder="Usuario">
-
-
-				<div class="contenedor">
-			<div class="input-contenedor">
-				<i class="fas fa-dumbbell"></i>	
-
-				<input type="password" placeholder="Contraseña">
+				<label for="Contraseña">Contraseña</label>
+				<input type="Password" placeholder="Enter Password" >
 
 
-			</div>
-			<input type="submit" value="Iniciar Sesión" class="button
-			">
-			<p>¿No tienes cuenta?<a class="link" href="registarte.html">Registrarse</a></p>
-  </form>
-</div>
-	
-	</form>	
+				<a href="Reservas.html" class="boton">Iniciar sesión</a><br>				
+				<a href="#">¿olvido su contraseña?</a><br>
+				<a href="registrarse.html">Registrarse</a> 
+
+			</form>
+			
+		</div>
+
+
 </body>
-</html>			
+</html>
